@@ -1,6 +1,6 @@
 Package: arm
-Version: 1.4-06
-Date: 2011-3-2
+Version: 1.4-07
+Date: 2011-3-22
 Title: Data Analysis Using Regression and Multilevel/Hierarchical Models
 Author: Andrew Gelman <gelman@stat.columbia.edu>,
         Yu-Sung Su <suyusung@tsinghua.edu.cn>,
